--- a/src/routes/MainPage.css
+++ b/src/routes/MainPage.css
@@ -1,3 +1,7 @@
+.container{
+    display: flex;
+    flex-direction: row;
+}
 .MenuLateral{
     height: 100vh;
     width: 15%;
@@ -33,4 +37,35 @@
     color: #D7DAD7;
 
     margin: 0;
+}
+.workspace{
+    height: auto;
+    width: 100%;
+
+    background-color: #D7DAD7;
+}
+.workspace-buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+    height: 100px;
+    margin: 10px 10px 10px 10px;
+
+    background-color: #09462A;
+}
+.workspace-buttons button{
+    height: 50px;
+    width: 100px;
+
+    color: #ffffff;
+    background-color: #27BE66;
+    border-radius: 5px;
+    border-style: none;
+
+    margin: 0 0 0 10px;
+    cursor: pointer;
+}
+.workspace-buttons button:hover, .MenuLateral a:hover{
+    border: solid 2px white;
 }
