--- a/src/pages/formCliente/FormClientes.css
+++ b/src/pages/formCliente/FormClientes.css
@@ -2,7 +2,7 @@
     font-family: 'Inter';
     font-style: 'Medium';
     font-weight: 'Medium';
-    src: local("Inter"), url(../Fonts/static/Inter-Medium.ttf) format("truetype");
+    src: local("Inter"), url(../../Fonts/static/Inter-Medium.ttf) format("truetype");
 }
 
 :root{
